--- a/4_google/index.html
+++ b/4_google/index.html
@@ -37,17 +37,17 @@
         <div class="first-line">
             English
         </div>
-        <div>
-            <span>
-                <a href="#" class="span-a-style">About</a>
-                <a href="#" class="span-a-style">Advertising</a>
-                <a href="#" class="span-a-style">Business</a>
-                <a href="#" class="span-a-style">How search works</a>
+        <div class="second-line">
+            <span class="span1-style">
+                <a href="#">About</a>
+                <a href="#">Advertising</a>
+                <a href="#">Business</a>
+                <a href="#">How search works</a>
             </span>
             <span class="span2-style">
-                <a href="#" class="span-a-style">Privacy</a>
-                <a href="#" class="span-a-style">Terms</a>
-                <a href="#" class="span-a-style">Settings</a>
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+                <a href="#">Settings</a>
             </span>
         </div>
     </div>
